--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
         .corner-logo {
             position: absolute;
-            top: -5px;
+            top: -5px; /* Moved down ~1.5cm to show full logo */
             right: 10px;
             width: 256px;
             height: 256px;
