--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -426,7 +424,6 @@
                 margin-top: -50px; /* Adjusted from 145px to 50px */
             }
         }
-
         @media (min-width: 641px) and (max-width: 1024px) {
             .bg-white {
                 margin-top: -165px;
@@ -599,9 +596,12 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.1.6/purify.min.js" integrity="sha512-jB0TkTBeQC9ZSkBqDhdmfTv1qdfbWpGE72yJ/01Srq6hEzZIz2xkz1e57p9ai7IeHMwEG7HpzG6NdptChif5Pg==" crossorigin="anonymous"></script>
-    <script src="utils.js"></script>
-    <script src="init.js"></script>
-    <script src="main.js"></script>
-    <script src="events.js"></script>
+    <script type="module" src="state.js"></script>
+    <script type="module" src="utils.js"></script>
+    <script type="module" src="init.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="media-utils.js"></script>
+    <script type="module" src="ws-handlers.js"></script>
+    <script type="module" src="ui-events.js"></script>
 </body>
 </html>
