--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
             display: flex;
             align-items: flex-start;
             gap: 0.75rem;
-            padding: 0 0.8rem;
+            margin: 0 0.8rem;
             position: relative;
             margin-top: 0.15rem;
-            width: 100%;
+            width: calc(100% - 1.6rem);
             box-sizing: border-box;
             z-index: 10;
         }
@@ -333,11 +333,12 @@
             justify-content: center;
         }
         @media (max-width: 640px) {
+            .input-container {
+                margin: 0.5rem 0.3rem;
+                width: calc(100% - 0.6rem);
+            }
             #messageInput {
                 padding: 0.5rem 0.75rem;
-            }
-            .input-container {
-                padding: 0 0.3rem;
             }
         }
         #messageInput::-webkit-scrollbar {
@@ -522,9 +523,6 @@
             width: 100%;
             max-width: 300px;
             margin: 0.5rem;
-        }
-        .hidden {
-            display: none !important;
         }
     </style>
 </head>
