--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -275,10 +276,10 @@
             display: flex;
             align-items: flex-start;
             gap: 0.75rem;
-            margin: 0 0.8rem;
+            padding: 0 0.8rem;
             position: relative;
             margin-top: 0.15rem;
-            width: calc(100% - 1.6rem);
+            width: 100%;
             box-sizing: border-box;
             z-index: 10;
         }
@@ -333,12 +334,11 @@
             justify-content: center;
         }
         @media (max-width: 640px) {
-            .input-container {
-                margin: 0.5rem 0.3rem;
-                width: calc(100% - 0.6rem);
-            }
             #messageInput {
                 padding: 0.5rem 0.75rem;
+            }
+            .input-container {
+                padding: 0 0.3rem;
             }
         }
         #messageInput::-webkit-scrollbar {
@@ -523,6 +523,9 @@
             width: 100%;
             max-width: 300px;
             margin: 0.5rem;
+        }
+        .hidden {
+            display: none !important;
         }
     </style>
 </head>
