--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,7 +55,7 @@
         }
         .corner-logo {
             position: absolute;
-            top: -5px; /* Moved down ~1.5cm to show full logo */
+            top: -5px;
             right: 10px;
             width: 256px;
             height: 256px;
@@ -150,20 +149,8 @@
                 cursor: not-allowed;
             }
             .button-group {
-                display: flex;
-                flex-direction: row;
-                gap: 0.3rem;
                 margin: 0.5rem 0.3rem;
                 width: calc(100% - 0.6rem);
-                justify-content: space-between;
-                flex-wrap: nowrap;
-            }
-            .button-group button {
-                flex: 1;
-                max-width: 33%;
-                margin: 0;
-                padding: 0.6rem 0.4rem;
-                font-size: 0.8rem;
             }
             #messages {
                 width: 100%;
@@ -174,12 +161,7 @@
                 margin-bottom: 0.75rem;
                 padding: 0.25rem 0;
             }
-            #status {
-                font-size: 0.875rem;
-                margin-bottom: 0.5rem;
-                padding: 0.25rem 0;
-            }
-            #privacyStatus {
+            #status, #privacyStatus {
                 font-size: 0.875rem;
                 margin-bottom: 0.5rem;
                 padding: 0.25rem 0;
@@ -199,8 +181,7 @@
         .message-bubble img, .message-bubble audio {
             max-width: 100%;
             border-radius: 0.5rem;
-            margin-top: 0.15rem;
-            margin-bottom: 0.5rem;
+            margin: 0.15rem 0 0.5rem;
         }
         .message-bubble.self {
             background-color: #3b82f6;
@@ -276,10 +257,8 @@
             display: flex;
             align-items: flex-start;
             gap: 0.75rem;
-            padding: 0 0.8rem;
-            position: relative;
-            margin-top: 0.15rem;
-            width: 100%;
+            margin: 0.5rem 0.8rem;
+            width: calc(100% - 1.6rem);
             box-sizing: border-box;
             z-index: 10;
         }
@@ -303,11 +282,9 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: all 0.2s ease;
         }
-        #imageButton, #voiceButton, #voiceCallButton {
+        #imageButton, #voiceButton, #voiceCallButton, #sendButton {
             width: 2.5rem;
             height: 2.5rem;
-            background-color: #10b981;
-            color: white;
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -316,6 +293,10 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: all 0.2s ease;
             flex-shrink: 0;
+        }
+        #imageButton, #voiceButton, #voiceCallButton {
+            background-color: #10b981;
+            color: white;
         }
         #imageButton:hover, #voiceButton:hover, #voiceCallButton:hover {
             background-color: #059669;
@@ -334,11 +315,12 @@
             justify-content: center;
         }
         @media (max-width: 640px) {
+            .input-container {
+                margin: 0.5rem 0.3rem;
+                width: calc(100% - 0.6rem);
+            }
             #messageInput {
                 padding: 0.5rem 0.75rem;
-            }
-            .input-container {
-                padding: 0 0.3rem;
             }
         }
         #messageInput::-webkit-scrollbar {
@@ -349,18 +331,8 @@
             scrollbar-width: none;
         }
         #sendButton {
-            width: 2.5rem;
-            height: 2.5rem;
             background-color: #2563eb;
             color: white;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: all 0.2s ease;
-            flex-shrink: 0;
         }
         #sendButton:hover {
             background-color: #1d4ed8;
@@ -423,7 +395,7 @@
             }
             #maxClientsContainer {
                 min-height: calc(100% + 37.8px);
-                margin-top: -50px; /* Adjusted from 145px to 50px */
+                margin-top: -50px;
             }
         }
         @media (min-width: 641px) and (max-width: 1024px) {
@@ -431,59 +403,12 @@
                 margin-top: -165px;
             }
             #maxClientsContainer {
-                margin-top: -50px; /* Adjusted from 145px to 50px */
+                margin-top: -50px;
             }
         }
         #maxClientsContainer {
             margin-top: 145px;
         }
-        }
-        @media (max-width: 640px) {
-            .button-group {
-                display: flex;
-                flex-direction: row;
-                gap: 0.3rem;
-                margin: 0.5rem 0.3rem;
-                width: calc(100% - 0.6rem);
-                justify-content: space-between;
-                flex-wrap: nowrap;
-            }
-            .button-group button {
-                flex: 1;
-                max-width: 33%;
-                margin: 0;
-                padding: 0.6rem 0.4rem;
-                font-size: 0.8rem;
-            }
-            h1.text-3xl {
-                font-size: 1.5rem;
-                margin-bottom: 0.75rem;
-                padding: 0.25rem 0;
-            }
-            #status {
-                font-size: 0.875rem;
-                margin-bottom: 0.5rem;
-                padding: 0.25rem 0;
-            }
-            #privacyStatus {
-                font-size: 0.875rem;
-                margin-bottom: 0.5rem;
-                padding: 0.25rem 0;
-            }
-            #messages {
-                width: 100%;
-                max-width: none;
-            }
-        }
-        #privacyStatus {
-            text-align: center;
-            font-size: 0.875rem;
-            color: #10b981;
-            margin-bottom: 0.5rem;
-            display: block !important;
-            visibility: visible !important;
-        }
-        /* Desktop-specific styles for maxClientsRadios */
         @media (min-width: 641px) {
             #maxClientsRadios {
                 display: flex;
