--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             }
             #maxClientsContainer {
                 position: absolute;
+                bottom: -335px;
                 left: 50%;
                 transform: translateX(-50%);
                 width: 100%;
