--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       display: flex;
       flex-direction: column-reverse;
       overflow-y: auto;
+      overflow-x: hidden;
       scroll-behavior: auto;
       z-index: 0;
       margin-bottom: 0.5rem;
@@ -172,7 +173,9 @@
       margin: 0.1rem 1rem;
       padding: 0.25rem 0.5rem;
       border-radius: 1rem;
-      word-wrap: break-word;
+      overflow-wrap: break-word;
+      word-break: break-all; /* Changed to break-all to handle long unbroken strings */
+      hyphens: auto;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
       display: inline-flex;
       flex-direction: column;
