--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -174,7 +175,7 @@
       padding: 0.25rem 0.5rem;
       border-radius: 1rem;
       overflow-wrap: break-word;
-      word-break: break-all; /* Changed to break-all to handle long unbroken strings */
+      word-break: break-word;
       hyphens: auto;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
       display: inline-flex;
@@ -534,3 +535,4 @@
   <script src="events.js"></script>
 </body>
 </html>
+</div>
